# backtracking-buttons

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: Bounds.h  Button.h  Coord.h  Pixel.h  algorithms.h  bounds.h  button.h  button_utils.h  circle.h  color.h  coord.h  file_io.h  img.h  io.h  pixel.h  pixel_class.h  point.h  rect.h  statics.h
include/alg/: algorithms.h
include/geom/: circle.h  color.h  point.h  rect.h
include/img/: pixel.h  scan.h
ppm/: CMakeLists.txt  algorithm_view.ppm  buttons_processed.ppm  concentric_circles.ppm  debug_view.ppm  debug_view_no_bounds.ppm
src/: Bounds.cpp  Button.cpp  CMakeLists.txt  Coord.cpp  Pixel.cpp  algorithms.cpp  bounds.cpp  button_utils.cpp  circle.cpp  color.cpp  coord.cpp  file_io.cpp  img.cpp  io.cpp  pixel.cpp  pixel_class.cpp  point.cpp  rect.cpp  statics.cpp
src/alg/: algorithms.cpp
src/geom/: circle.cpp  point.cpp  rect.cpp
src/img/: pixel.cpp  scan.cpp
tests/: Buttons_processed.ppm  CMakeLists.txt  algorithm_view.ppm  debug.ppm  pixel_class_tests.cpp
